<resources>
    <string name="app_name">Salesforce Scanner</string>
    <string name="scanResult">Scan Result</string>
    <string name="scanDetailTitle">Scan Details</string>
    <string name="dateScanned">DD-MM-YYYY</string>
    <string name="dateScannedLabel">Date Scanned</string>
    <string name="idScannedLabel">Contact ID</string>
    <string name="scanIdValue">......</string>
    <string name="codeLabel">Contact name</string>
    <string name="codeValue">......</string>
    <string name="SHARED_PREF_NAME">com.example.salesforcescanner.sharedprefs</string>
    <string name="CONTACT_LIST">contactlist</string>
</resources>